<resources>
    <string name="app_name">screen</string>
    <string name="loginUser">User</string>
    <string name="loginPassword">Password</string>
    <string name="login_Enter">Enter</string>
    <string name="login_create">Create Account</string>
    <string name="registerName">Name</string>
    <string name="registerLastname">last name</string>
    <string name="registerEmail">email</string>
    <string name="registerUser">User</string>
    <string name="registerPassword">Password</string>
    <string name="de">Repeate password</string>
    <string name="registerRepassword">repeat password</string>
    <string name="registerAge">Age</string>
    <string name="registerCreate">Create</string>
    <string name="registerRadiobuttonMale">male</string>
    <string name="registerRadiobuttonFemale">female</string>
    <string name="title_activity_section">SectionActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ingresos">Ingresos</string>
    <string name="deducibles">Deducibles</string>
    <string name="gastos">Gastos</string>
    <string name="saldo">Saldo:$0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_gastos">Gastos</string>
    <string name="title_deducible">Deducibles</string>
    <string name="title_ingresos">Ingresos</string>
    <string name="title_deducibles">Deducibles</string>
    <string name="costTextValue">add value outlay</string>
    <string name="costTextcommit">"add comment outlay "</string>
    <string name="costTextDate">"add date outlay "</string>
    <string name="costButton">"Agree "</string>
    <string name="deductibleValue">add value deductible</string>
    <string name="deductibleNote">add note deductible</string>
    <string name="deductibleDate">add Date of deductible</string>
    <string name="inflowTextcomment">add note income</string>
    <string name="inflowTextValue">"add value "</string>
</resources>