<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ui.ingresos.IngresosFragment">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="145dp"
        android:src="@drawable/safecash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inflowTextValue"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="97dp"
        android:ems="10"
        android:hint="@string/inflowTextValue"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inflowtextTotal" />

    <EditText
        android:id="@+id/inflowTextComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="97dp"
        android:ems="10"
        android:hint="@string/inflowTextcomment"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inflowTextValue" />

    <Button
        android:id="@+id/inflowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="159dp"
        android:text="@string/costButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inflowTextComment" />

    <TextView
        android:id="@+id/inflowtextTotal"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="177dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
</androidx.constraintlayout.widget.ConstraintLayout>