<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screenmain.ScreenMainActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/imagencasa" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/imagenmedico" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/imagenalimentacion" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/imagentransporte" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/imagenentretenimiento" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:srcCompat="@drawable/imagenmoda" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/ingresos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:text="@string/deducibles"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/gastos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="150dp"
        android:text="@string/saldo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5"
        app:srcCompat="@drawable/estadistica" />
</androidx.constraintlayout.widget.ConstraintLayout>